index.css
 .u-section-1 {
  background-image: linear-gradient(135deg, rgba(245, 247, 250, 0.5), rgba(174, 181, 196, 0.5));
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
}

.u-section-1 .u-sheet-1 {
  min-height: 100vh;
}

.u-section-1 .u-group-1 {
  width: 570px;
  min-height: 484px;
  height: auto;
  margin: 95px 600px 0 0;
}

.u-section-1 .u-container-layout-1 {
  padding: 30px;
}

.u-section-1 .u-text-1 {
  letter-spacing: 2px;
  font-size: 1.5rem;
  text-transform: uppercase;
  font-weight: 100;
  margin: 45px 0 0;
}

.u-section-1 .u-text-2 {
  text-transform: uppercase;
  font-weight: 900;
  font-size: 4.5rem;
  line-height: 0.8;
  margin: 20px 0 0;
}

.u-section-1 .u-text-3 {
  letter-spacing: 2px;
  font-weight: 400;
  text-transform: none;
  margin: 13px 0 0;
}

.u-section-1 .u-btn-1 {
  font-weight: 700;
  text-transform: uppercase;
  font-size: 1rem;
  letter-spacing: 1px;
  background-image: none;
  --radius: 10px;
  margin: 20px auto 0 0;
  padding: 12px 41px 13px 40px;
}

.u-section-1 .u-image-1 {
  --radius: 10px;
  width: 543px;
  height: 334px;
  margin: -409px 0 75px auto;
  object-fit: cover;
  object-position: left center;
}

@media (max-width: 1199px) {
  .u-section-1 .u-group-1 {
    width: 522px;
    height: auto;
    margin-right: 580px;
  }

  .u-section-1 .u-text-2 {
    font-size: 7.5rem;
  }

  .u-section-1 .u-image-1 {
    margin-top: 20px;
  }
}

@media (max-width: 991px) {
  .u-section-1 .u-sheet-1 {
    min-height: 1111px;
  }

  .u-section-1 .u-group-1 {
    width: 610px;
    min-height: 557px;
    margin-top: 60px;
  }

  .u-section-1 .u-text-2 {
    font-size: 4.5rem;
    line-height: 1;
  }

  .u-section-1 .u-image-1 {
    margin-top: 30px;
    margin-right: auto;
    margin-bottom: 60px;
  }
}

@media (max-width: 767px) {
   .u-section-1 {
    background-position: 57.2% 25.53%;
    background-size: auto 115%;
  }

  .u-section-1 .u-sheet-1 {
    min-height: 1109px;
  }

  .u-section-1 .u-group-1 {
    width: 323px;
    min-height: 334px;
  }

  .u-section-1 .u-container-layout-1 {
    padding-left: 10px;
    padding-right: 10px;
  }

  .u-section-1 .u-text-1 {
    font-size: 1.25rem;
  }

  .u-section-1 .u-text-2 {
    font-size: 4.875rem;
  }

  .u-section-1 .u-image-1 {
    width: 540px;
    height: 332px;
    margin-top: 20px;
    margin-bottom: 75px;
    object-fit: cover;
    object-position: left center;
  }
}

@media (max-width: 575px) {
   .u-section-1 {
    background-position: 57.61% 20.64%;
    background-size: auto 125%;
  }

  .u-section-1 .u-sheet-1 {
    min-height: 830px;
  }

  .u-section-1 .u-group-1 {
    min-height: 481px;
    margin-right: initial;
    margin-left: initial;
    width: auto;
  }

  .u-section-1 .u-container-layout-1 {
    padding-bottom: 19px;
  }

  .u-section-1 .u-text-1 {
    font-size: 1rem;
  }

  .u-section-1 .u-text-2 {
    font-size: 3rem;
  }

  .u-section-1 .u-image-1 {
    height: 209px;
    margin-top: 21px;
    margin-bottom: 60px;
    margin-right: initial;
    margin-left: initial;
    width: auto;
    object-fit: cover;
    object-position: left center;
  }
}.u-section-2 .u-sheet-1 {
  min-height: 293px;
}

.u-section-2 .u-text-1 {
  font-size: 1.5rem;
  margin: 44px auto 0;
}

.u-section-2 .u-list-1 {
  margin-top: -7px;
  margin-bottom: 39px;
}

.u-section-2 .u-repeater-1 {
  grid-auto-columns: calc(20% - 8px);
  grid-template-columns: repeat(5, calc(20% - 8px));
  min-height: 190px;
  --gap: 10px;
}

.u-section-2 .u-container-layout-1 {
  padding: 7px 10px;
}

.u-section-2 .u-image-1 {
  width: 175px;
  height: 87px;
  margin: 0 auto;
}

.u-section-2 .u-container-layout-2 {
  padding: 7px 10px;
}

.u-section-2 .u-image-2 {
  width: 175px;
  height: 87px;
  margin: 0 auto;
}

.u-section-2 .u-container-layout-3 {
  padding: 7px 10px;
}

.u-section-2 .u-image-3 {
  width: 175px;
  height: 87px;
  margin: 0 auto;
}

.u-section-2 .u-container-layout-4 {
  padding: 7px 10px;
}

.u-section-2 .u-image-4 {
  width: 175px;
  height: 87px;
  margin: 0 auto;
}

.u-section-2 .u-container-layout-5 {
  padding: 7px 10px;
}

.u-section-2 .u-image-5 {
  width: 175px;
  height: 87px;
  margin: 0 auto;
}

@media (max-width: 1199px) {
  .u-section-2 .u-sheet-1 {
    min-height: 395px;
  }

  .u-section-2 .u-repeater-1 {
    min-height: 157px;
    grid-gap: 10px;
  }
}

@media (max-width: 991px) {
  .u-section-2 .u-sheet-1 {
    min-height: 659px;
  }

  .u-section-2 .u-repeater-1 {
    grid-auto-columns: calc(33.333333333333336% - 6.666666666666667px);
    grid-template-columns: repeat(3, calc(33.333333333333336% - 6.666666666666667px));
    min-height: 401px;
  }
}

@media (max-width: 767px) {
  .u-section-2 .u-sheet-1 {
    min-height: 845px;
  }

  .u-section-2 .u-repeater-1 {
    grid-auto-columns: calc(50% - 5px);
    grid-template-columns: repeat(2, calc(50% - 5px));
    min-height: 677px;
  }
}

@media (max-width: 575px) {
  .u-section-2 .u-sheet-1 {
    min-height: 1020px;
  }

  .u-section-2 .u-repeater-1 {
    grid-auto-columns: calc(100% - 0px);
    grid-template-columns: 100%;
  }
}.u-section-3 .u-sheet-1 {
  min-height: 749px;
}

.u-section-3 .u-layout-wrap-1 {
  margin-top: 51px;
  margin-bottom: 51px;
}

.u-section-3 .u-layout-cell-1 {
  min-height: 616px;
}

.u-section-3 .u-container-layout-1 {
  padding: 30px;
}

.u-section-3 .u-text-1 {
  letter-spacing: 12px;
  text-transform: uppercase;
  font-weight: 100;
  font-size: 1.25rem;
  margin: 328px auto 0 0;
}

.u-section-3 .u-text-2 {
  font-weight: 900;
  text-transform: uppercase;
  font-size: 4.5rem;
  margin: 21px auto 0 0;
}

.u-section-3 .u-layout-cell-2 {
  min-height: 205px;
}

.u-section-3 .u-container-layout-2 {
  padding: 10px;
}

.u-section-3 .u-text-3 {
  margin-top: 0;
  font-weight: 900;
  font-size: 3rem;
  margin-bottom: 0;
}

.u-section-3 .u-text-4 {
  margin-left: 0;
  letter-spacing: 2px;
  margin-bottom: 0;
  text-transform: uppercase;
  font-weight: 700;
}
/* ... */

